--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "primer programa",
   "main": "programa.js",
   "dependencies": {
+    "express": "^4.17.1",
     "yargs": "^13.2.4"
   },
   "devDependencies": {},
